# coding_task

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Problem Description.ipynb  README.md  pyproject.toml
conf/: config.yaml
eda/: eda.ipynb
model/src/data_preparation/: outlier_treatment.py  preprocessing.py
model/src/model_training/: main.py  pipelines.py
model/src/postprocessing/: main.py
model/src/scripts/: run.py
model/src/utils/: helpers.py
model/tests/data_preparation/: test_outlier_treatment.py  test_preprocessing.py
model/tests/model_training/: test_pipelines.py
model/tests/postprocessing/: test_get_feat_imp.py
model/tests/utils/: test_helpers.py
