[tool.poetry]
name = "coding-task"
version = "0.1.0"
description = "This is the project for the coding task from Simon Kucher"
authors = ["Lion Ly"]
readme = "README.md"

packages = [
    { include = "model" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
scikit-learn = "^1.6.1"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
omegaconf = "^2.3.0"
lightgbm = "^4.6.0"
xgboost = "^3.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
black = "^22.1.0"
isort = "~5.10.1"
pre-commit = "~2.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.py$'

[tool.isort]
line_length = 100
multi_line_output = 3
extra_standard_library = "setuptools,logging,os,warnings,sys"
profile = "black"
skip = [".gitignore", ".venv"]